# aegateway

./: .gitignore  CMakeLists.txt  Setup.txt  SetupMqttBroker.txt  deploy.sh  main.cpp
src/: main.cpp
src/mqtt/: client.cpp  client.h
